# sfc-cli

./: .gitignore  Cargo.toml  README.md
src/: container.rs  error.rs  flake.rs  history.rs  lib.rs  package.rs  sfc.rs
src/cli/: commands.rs  mod.rs  ui.rs
src/cli/handlers/: config.rs  container.rs  flake.rs  history.rs  mod.rs  package.rs  snapshot.rs  system.rs  toolchain.rs
src/config/: mod.rs  settings.rs
src/core/: hash.rs  mod.rs  snapshot.rs  symlink.rs  workspace.rs
src/sharing/: flake.rs  mod.rs  snapshot.rs
src/system/: binary.rs  mod.rs  platform.rs
tests/: cli_integration.rs
